# sound_level_server

./: .gitignore  CmakeLists.txt  README.md  build.bat  clientTest.cpp  command_handler.cpp  command_handler.h  main.cpp  media_commands_handler.cpp  register_service.bat  start.bat  testServer.cpp  unregister_register_service_reboot_required.bat  volume_handler.cpp  volume_handler.h
inc/Includes/Server/: IConnection.h  IConnectionEventsListener.h  IRawData.h  IRawDataProcessor.h
inc/Includes/Utils/: Event.h  Usings.h
include/: Command.h  ConnectionHandler.h  abstractframe.h  command_handler.h  framereader.h  framewriter.h  media_commands_handler.h  server.h  volume_handler.h
src/: CMakeLists.txt
src/Executable/: CMakeLists.txt  main.cpp
src/ServerLib/: Acceptor.cpp  Acceptor.h  CMakeLists.txt  Client.cpp  Client.h  Connection.cpp  Connection.h  IncomingDataQueue.cpp  IncomingDataQueue.h  RawData.cpp  RawData.h  RawDataProcessor.h  Server.cpp  Server.h  stdafx.h
src/Utils/: CMakeLists.txt  Event.cpp
src/client/: CMakeLists.txt  clientTest.cpp
src/core/: CMakeLists.txt  core.cpp  main.cpp
src/frame/: CMakeLists.txt  abstractframe.cpp  framereader.cpp  framewriter.cpp
src/handlers/: CMakeLists.txt  command_handler.cpp  volume_handler.cpp
src/server/: CMakeLists.txt  ConnectionHandler.cpp  server.cpp
